# TinyClaw

./: README.md  app.css  config.py  custom_types.py  main.py  mcp.json.example  mcp_server.py  pyproject.toml
agent/: agent.py
auth/: oauth.py  token_store.py
chat_interface/: helpers.py
docs/superpowers/plans/: 2026-04-20-external-tools-framework.md
docs/superpowers/specs/: 2026-04-20-external-tools-framework-design.md
llm/: llm.py
mcp_client/: __init__.py  config.py  registry.py
plugins/: calculator.py  time.py  web_fetch.py
tests/: test_main_config.py  test_oauth.py  test_token_store.py
ui/: __init__.py  app.py  logging.py
