[project]
name = "applied-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.94.0",
    "mcp>=1.27.0",
    "ollama>=0.6.1",
    "textual>=8.2.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.pyright]
reportUnusedCallResult = false
